--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     ></script>
     <style>
       body {
-        background-color: oldlace;
+        background-color: white;
         color: #000000;
         font-family: Arial, sans-serif;
         transition: background-color 0.3s, color 0.3s;
@@ -26,7 +26,7 @@
       /* Dark mode styles */
       .dark-mode {
         background-color: #121212;
-        color: oldlace;
+        color: white;
       }
   
       /* Button styles */
