--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,7 +87,7 @@ p {
 
 .pick {
   position: relative;
-  left: 250px;
+  left: 200px;
   bottom: 77px;
   width: 390px;
   height: 40px;
@@ -97,7 +97,7 @@ p {
 
 .roomcode {
   position: relative;
-  left: 450px;
+  left: 400px;
   bottom: 30px;
   width: 390px;
   height: 40px;
@@ -109,7 +109,7 @@ p {
 .createbtn {
   font-size: 30px;
   position: relative;
-  left: 250px;  
+  left: 200px;  
   bottom: 150px;
   width: 400px;
   padding: 1%;
@@ -122,7 +122,7 @@ p {
 .joinbtn {
   font-size: 30px;
   position: relative;
-  left: 53px;
+  left: 3px;
   width: 400px;
   top: 15px;
   padding: 1%;
@@ -139,6 +139,13 @@ p {
   bottom: 295px;
   z-index: 10;
 }
+
+.homemodebutton {
+position: relative;
+left: 430px;
+bottom: 80px;
+}
+
 #user-list {
   position: relative;
   right: 200px;
@@ -148,21 +155,21 @@ p {
 
 .rules {
   position: relative;
-  left: 250px;
+  left: 210px;
   bottom: 50px;
 }
 
 .current {
   position: relative;
   top: 170px;
-  right: 275px; /* Adjust the value as needed to move it to the left */
+  right: 325px; /* Adjust the value as needed to move it to the left */
   color: lime;
   font-size: 25px;
 }
 
 .roomlist {
   position: relative;
-  right: 530px;
+  right: 580px;
   top: 200px;
   list-style-type: none;
 
@@ -170,6 +177,7 @@ p {
 
 .code {
   color: navy;
+  background-color: oldlace;
 }
 
 .joinbtn:hover, .createbtn:hover {
@@ -189,7 +197,7 @@ label {
 
 h1 {
   position: relative;
-  left: 250px;
+  left: 200px;
   font-size: 50px;
   color: red;
 }
