--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<button class="homemodebutton" id="mode-toggle">
+  <img id="mode-icon" src="https://5fc98fa113f6897cea53-06dfa63be377ed632ae798753ae0fb3f.ssl.cf2.rackcdn.com/product_images/files/000/181/481/legacy_product_detail_large/data?1681938205" width="20" alt="Toggle Mode">
+</button>
 <form method="post" class="buttons">
   <h1>Welcome to the portal</h1>
   <h6 class="rules">
