--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,7 +27,7 @@ body {
 .message-box {
   position: relative;
   right: 50px;
-  bottom: 100px;
+  bottom: 50px;
   border-color: #333;
   border-width: 2px;
   border-style: solid;
@@ -87,7 +87,7 @@ p {
 
 .pick {
   position: relative;
-  left: 200px;
+  left: 175px;
   bottom: 77px;
   width: 390px;
   height: 40px;
@@ -97,7 +97,7 @@ p {
 
 .roomcode {
   position: relative;
-  left: 400px;
+  left: 375px;
   bottom: 30px;
   width: 390px;
   height: 40px;
@@ -109,7 +109,7 @@ p {
 .createbtn {
   font-size: 30px;
   position: relative;
-  left: 200px;  
+  left: 175px;  
   bottom: 150px;
   width: 400px;
   padding: 1%;
@@ -122,7 +122,7 @@ p {
 .joinbtn {
   font-size: 30px;
   position: relative;
-  left: 3px;
+  right: 23px;
   width: 400px;
   top: 15px;
   padding: 1%;
@@ -135,8 +135,8 @@ p {
 
 .roommodebutton {
   position: relative;
-  left: 200px;
-  bottom: 295px;
+  left: 250px;
+  bottom: 250px;
   z-index: 10;
 }
 
@@ -147,31 +147,32 @@ p {
 
 #user-list {
   position: relative;
-  right: 200px;
-  top: 40px;
+  top: 50px;
+  right: 275px;
   list-style-type: none;
 }
 
+ .users {
+  position: relative;
+  right: 125px;
+  bottom: 275px;
+  visibility: visible;
+  font-size: 30px; /* Adjust font size if it's too small */
+}
+
+
 .rules {
   position: relative;
-  left: 210px;
+  left: 160px;
   bottom: 50px;
 }
 
 .current {
   position: relative;
   top: 170px;
-  right: 325px; /* Adjust the value as needed to move it to the left */
+  right: 350px; /* Adjust the value as needed to move it to the left */
   color: lime;
   font-size: 25px;
-}
-
-.roomlist {
-  position: relative;
-  right: 580px;
-  top: 200px;
-  list-style-type: none;
-
 }
 
 .code {
@@ -190,6 +191,23 @@ p {
 a {
   color: lime;
 }
+
+.roomlist {
+  position: relative;
+  top: 250px;
+  right: 600px;
+  list-style-type: none;
+}
+.enter{
+  color: navy;
+}
+
+.no {
+  position: relative;
+  top: 400px;
+  left: -550px; /* Move it 100px to the left */
+}
+
 .joinbtn:hover, .createbtn:hover {
     background-color: #085c50;
 
@@ -207,7 +225,7 @@ label {
 
 h1 {
   position: relative;
-  left: 200px;
+  left: 175px;
   font-size: 50px;
   color: red;
 }
@@ -225,21 +243,32 @@ h4 {
   right: 55px;
 }
 
-.user-list h3 {
-  color: black;  /* Default color for light mode */
+#video-chat-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px; /* Add space between the videos */
+  margin-top: 20px;
 }
 
-/* Dark mode styles */
-body.dark-mode {
-  background-color: #121212;  /* Dark background */
-  color: white;  /* Light text */
+.video-container {
+  width: 45%; /* Set width of each video container to 45% */
+  height: auto;
 }
 
-body.dark-mode .user-list h3 {
-  color: white;  /* Ensure the heading color is light in dark mode */
+#localVideo,
+#remoteVideo {
+  width: 100%; /* Make both videos take full width of their container */
+  height: auto; /* Maintain aspect ratio */
+  border: 2px solid #ccc;
+  border-radius: 8px;
 }
 
-/* User list colors */
-body.dark-mode .user-list ul li {
-  color: white;  /* Light text for user list items in dark mode */
+ /* Make the emojis in the chat messages larger */
+span {
+  font-size: 20px;
+}
+
+/* Optional: Style for chat links if you have any clickable links in the messages */
+.messages .chat-link {
+  font-size: 16px;
 }
